// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`MenuButtonIcon > should be a cross icon when open 1`] = `
.c1 {
  width: 24px;
  height: 2px;
  background-color: #ffffff;
  transition-property: left,top,transform;
  transition-duration: 500ms;
  transition-timing-function: ease-in-out;
  position: absolute;
  left: 6px;
  top: 17px;
  transform: rotate(45deg);
}

.c2 {
  width: 24px;
  height: 2px;
  background-color: #ffffff;
  transition-property: left,top,transform;
  transition-duration: 500ms;
  transition-timing-function: ease-in-out;
  position: absolute;
  left: 6px;
  top: 17px;
  transform: rotate(-45deg);
}

.c3 {
  width: 24px;
  height: 2px;
  background-color: #ffffff;
  transition-property: left,top,transform;
  transition-duration: 500ms;
  transition-timing-function: ease-in-out;
  position: absolute;
  left: 6px;
  top: 17px;
  transform: rotate(-45deg);
}

.c0 {
  width: 36px;
  height: 36px;
  position: relative;
}

<div
  class="c0"
  id="Click-to-close-icon"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  />
  <div
    class="c3"
  />
</div>
`;

exports[`MenuButtonIcon > should be a stack icon when closed 1`] = `
.c1 {
  width: 24px;
  height: 2px;
  background-color: #ffffff;
  transition-property: left,top,transform;
  transition-duration: 500ms;
  transition-timing-function: ease-in-out;
  position: absolute;
  left: 6px;
  top: 9px;
  transform: rotate(0deg);
}

.c2 {
  width: 24px;
  height: 2px;
  background-color: #ffffff;
  transition-property: left,top,transform;
  transition-duration: 500ms;
  transition-timing-function: ease-in-out;
  position: absolute;
  left: 6px;
  top: 17px;
  transform: rotate(0deg);
}

.c3 {
  width: 24px;
  height: 2px;
  background-color: #ffffff;
  transition-property: left,top,transform;
  transition-duration: 500ms;
  transition-timing-function: ease-in-out;
  position: absolute;
  left: 6px;
  top: 25px;
  transform: rotate(0deg);
}

.c0 {
  width: 36px;
  height: 36px;
  position: relative;
}

<div
  class="c0"
  id="Click-to-open-icon"
>
  <div
    class="c1"
  />
  <div
    class="c2"
  />
  <div
    class="c3"
  />
</div>
`;
